<?xml version="1.0"?>
<package>
  <name>asr_mild_base_fake_driving</name>
  <version>1.0.0</version>
  <description>The asr_mild_base_fake_driving package provides a simulation system for the robot driving. It simulates the desired driven way which is calculated by the navigation.</description>
  <author>Dehmani Souheil, Karrenbauer Oliver, Meißner Pascal</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/asr_mild_base_fake_driving</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>Boost</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>Boost</run_depend>

  <export>
    
  </export>
</package>
